--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -5,6 +5,11 @@
     padding: 0;
 }
 
+body {
+    /* background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+}
+
 hr {
     margin: auto;
     width: 75%;
@@ -97,7 +102,7 @@ hr {
 }
 
 input[type=button], input[type=submit] {
-    background-color: rgb(173, 0, 0);
+    background-color: #2E8B57;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -125,12 +130,15 @@ input[type=button], input[type=submit] {
 }
 
 input[type=button]:hover, input[type=submit]:hover, #article-type > button:hover  {
-    background-color: #630000;
+    background-color: #1f5f3b;
     cursor:pointer;
 }
 
 #article-type > button {
-    background-color: rgb(173, 0, 0);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background-color: #2E8B57;
     color: white;
     padding: 12px 30px 12px 30px;
     text-align: left;
@@ -177,18 +185,13 @@ input[type=textarea], textarea {
     word-wrap: break-word;
     width: 900px;
     height: 100%;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     resize: none;
     overflow: auto;
 }
 
-input[type=textarea], textarea:hover {
+input[type=textarea], textarea:focus {
     border: 4px solid #00a108;
 }
 
