--- a/static/Hero.css
+++ b/static/Hero.css
@@ -6,8 +6,7 @@
 }
 
 body {
-    /* background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
-    background-image: linear-gradient(to right top, #5e72eb, #8d56b5, #de8887, #9d90ff,#6b57fe);
+    background-image: linear-gradient(to right top,#051937, #004d7a, #008793, #00bf72, #a8eb12);
 }
 
 hr {
@@ -30,18 +29,22 @@ hr {
 }
 
 .logo {
-    width: 150px;
+    width: 220px;
     height: auto;
     padding-right: 30px;
 }
 
 .title {
+    display: flex;
+    flex-direction: row;
+}
+
+.title > h1 {
+    margin-top: 15px;
     color: white;
-    font-size: 70px;
+    font-size: 120px;
     font-family: 'Open Sans';
     font-weight: 800;
-    display: flex;
-    flex-direction: horizontal;
 }
 
 .hero-container > h2 {
@@ -74,15 +77,15 @@ hr {
 }
 
 .hero-container > p span:nth-child(1) {
-    animation-delay: 0.5s;
+    animation-delay: 0.25s;
 }
   
 .hero-container > p span:nth-child(2) {
-    animation-delay: 1s;
+    animation-delay: 0.5s;
 }
   
 .hero-container > p span:nth-child(3) {
-    animation-delay: 1.5s;
+    animation-delay: 1s;
 }
   
 @keyframes sentence-fade-in {
@@ -102,7 +105,7 @@ hr {
 }
 
 input[type=button], input[type=submit] {
-    background-color: #2E8B57;
+    background-color: #d85353;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -123,6 +126,10 @@ input[type=button], input[type=submit] {
     font-family: 'Open Sans';
     font-weight: 800;
 }
+
+input[type=submit] {
+    margin-left: 50px;
+}
  
 #article-type > h2 {
     color: white;
@@ -130,7 +137,7 @@ input[type=button], input[type=submit] {
 }
 
 input[type=button]:hover, input[type=submit]:hover, #article-type > button:hover  {
-    background-color: #1f5f3b;
+    background-color: #963939;
     cursor:pointer;
 }
 
@@ -138,7 +145,8 @@ input[type=button]:hover, input[type=submit]:hover, #article-type > button:hover
     border-top: none;
     border-left: none;
     border-right: none;
-    background-color: #2E8B57;
+    border-bottom: none;
+    background-color: #d85353;
     color: white;
     padding: 12px 30px 12px 30px;
     text-align: left;
@@ -192,7 +200,9 @@ input[type=textarea], textarea {
 }
 
 input[type=textarea], textarea:focus {
-    border: 4px solid #00a108;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #a8eb12;
 }
 
 input[type="text"]:hover {
@@ -237,6 +247,3 @@ input[type="text"]:hover {
     text-decoration: underline;
 }
 
-.carousel-caption {
-    margin-top: 200px;
-}
